--- a/style.css
+++ b/style.css
@@ -15,7 +15,13 @@ a{
 h6 {
     color:rgb(91, 75, 36);
 }
-
+body {
+    background-color: rgb(10, 229, 156);
+    color: white;
+    background-color: #63c653;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E%3Cg fill='%23a5f1c0' fill-opacity='0.44'%3E%3Cpolygon fill-rule='evenodd' points='8 4 12 6 8 8 6 12 4 8 0 6 4 4 6 0 8 4'/%3E%3C/g%3E%3C/svg%3E");
+    font-size: 16px;
+}
 .titulo h1{
     display: flex;
     justify-content: center;
@@ -63,3 +69,110 @@ h6 {
 .gato{
     margin: auto;
 }
+
+/*adopCat*/
+/*titulo*/
+.tituloCat {
+    display: flex;
+    justify-content: center;
+    margin-top: 5rem;
+}
+
+/*Parrafo*/
+.parrafoCat {
+    display: grid;
+    place-content: center;
+    text-align: center;
+    justify-content: center;
+    letter-spacing: 2px;
+    margin: auto;
+    font-size: 3vh;
+}
+
+/*subtitulo*/
+.subtituloCat {
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+}
+
+/*adopDog*/
+/*titulo*/
+.tituloDog {
+    display: flex;
+    justify-content: center;
+    margin-top: 5rem;
+}
+
+/*Parrafo*/
+.parrafoDog {
+    display: grid;
+    place-content: center;
+    text-align: center;
+    justify-content: center;
+    letter-spacing: 2px;
+    margin: auto;
+    font-size: 3vh;
+}
+
+/*subtitulo*/
+.subtituloDog {
+    display: flex;
+    justify-content: center;
+    margin: 2rem;
+}
+
+/*Modal*/
+.modalDialog {
+	position: fixed;
+	font-family: Arial, Helvetica, sans-serif;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+    color: black;
+	background: rgba(0,0,0,0.8);
+	z-index: 99999;
+	opacity:0;
+	-webkit-transition: opacity 400ms ease-in;
+	-moz-transition: opacity 400ms ease-in;
+	transition: opacity 400ms ease-in;
+	pointer-events: none;
+}
+.modalDialog:target {
+	opacity:1;
+	pointer-events: auto;
+}
+.modalDialog > div {
+	width: 400px;
+	position: relative;
+	margin: 10% auto;
+	padding: 5px 20px 13px 20px;
+	border-radius: 10px;
+	background: #fff;
+	background: -moz-linear-gradient(#fff, #999);
+	background: -webkit-linear-gradient(#fff, #999);
+	background: -o-linear-gradient(#fff, #999);
+  -webkit-transition: opacity 400ms ease-in;
+-moz-transition: opacity 400ms ease-in;
+transition: opacity 400ms ease-in;
+}
+.close {
+	background: #606061;
+	color: #FFFFFF;
+	line-height: 25px;
+	position: absolute;
+	right: -12px;
+	text-align: center;
+	top: -10px;
+	width: 24px;
+	text-decoration: none;
+	font-weight: bold;
+	-webkit-border-radius: 12px;
+	-moz-border-radius: 12px;
+	border-radius: 12px;
+	-moz-box-shadow: 1px 1px 3px #000;
+	-webkit-box-shadow: 1px 1px 3px #000;
+	box-shadow: 1px 1px 3px #000;
+}
+.close:hover { background: #00d9ff; }
